# regpo

./: .eslintrc.js  .gitignore  README.md  config.example.yml  course-registration.ts  index.html  package-lock.json  package.json  poller.ts
rust/: .env.example  Cargo.toml  config.example.toml
rust/src/: config.toml  course_registration.rs  lib.rs  main.rs  send_notification.rs
src/: lib.ts  main.ts  send-email.ts
typescript/: .gitignore  README.md  package-lock.json  package.json
typescript/src/: ICourseRegistration.ts  lib.ts  main.ts  send-email.ts
