[package]
name = "regpo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
serde = "1.0.195"
sled = "0.34.7"
toml = "0.8.8"
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
clokwerk = "0.4.0"
